# HoloScanner

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
CPP/: Adapters.h  DataTypes.h  DepthDataTypes.h  DepthProcessor.cpp  DepthProcessor.h  DirectXHelpers.h  EigenHelpers.h  FileDataSource.h  InteractionDataTypes.h  MeshProcessor.h  PCDDataTypes.h  RawDataTypes.h  Registrator.cpp  Registrator.cpp.orig  Registrator.h  Registrator.h.orig  TCPDataSource.cpp  TCPDataSource.h  TCPStreamingSource.cpp  TCPStreamingSource.h  TerminalSocket.cpp  TerminalSocket.h  Test.cpp  Viewer.cpp  Viewer.h  readme.md  registrator.cpp  registrator.h
CPP/CPP/DirectXMath/: directxmath-config-version.cmake  directxmath-config.cmake
CPP/Pipelines/: DepthToPCD.cpp  PCD.cpp
CPP/ext/score-denoise/: exampleinput.xyz
HL2UnityPlugin/: HL2Cannon.cpp  HL2Cannon.h  HL2Cannon.idl  HL2Interactions.cpp  HL2Interactions.h  HL2Interactions.idl  HL2ResearchMode.cpp  HL2ResearchMode.h  HL2ResearchMode.idl  HL2UnityPlugin.vcxproj  HL2UnityPlugin.vcxproj.filters
HL2UnityPlugin/Cannon/: MixedReality.cpp
UnitySample/Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealityInputSystemProfile.asset
UnitySample/Assets/Plugins/WSA/ARM64/: HL2UnityPlugin.winmd
UnitySample/Assets/Prefabs/: GazeButton.prefab
UnitySample/Assets/Scenes/: PointCloudSample.unity
UnitySample/Assets/Scipts/: GazeButton.cs  ImuVisualize.cs  KeyboardCommand.cs  ResearchModeVideoStream.cs  StopStartController.cs  TCPClient.cs
python/: TCPServer.py
